Not enough voodoo

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
   </build>
 
   <dependencies>
+    <!-- Lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.36</version>
+    </dependency>
+
+
     <!-- Logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
